# bioreactor_model_thesis

./: .gitignore  LICENSE  README.md  model.ipynb  pyproject.toml
Params/: HaldaneDict.npz  MonodDict.npz
plots_eps/: run2_haldane.eps  run2_haldane_hybrid.eps  run2_monod.eps  run2_monod_hybrid.eps  run3_haldane.eps  run3_haldane_hybrid.eps  run3_monod.eps  run3_monod_hybrid.eps  run4_haldane.eps  run4_haldane_hybrid.eps  run4_monod.eps  run4_monod_hybrid.eps  run_monod.eps  validation.eps
raw_data/: Run02_D216.csv  Run03.csv  Run04.csv  RunV_D216.csv
