[project]
name = "thesispub"
version = "0.1.0"
description = ""
authors = [
    {name = "Edward W"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "scipy (>=1.17.1,<2.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "diffrax (>=0.7.2,<0.8.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "optax (>=0.2.8,<0.3.0)",
    "optimistix (>=0.1.0,<0.2.0)",
    "equinox (>=0.13.8,<0.14.0)",
    "scienceplots (>=2.2.1,<3.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "jax (==0.9)",
    "gpjax (>=0.14.0,<0.15.0)",
    "pingouin (>=0.6.1,<0.7.0)",
    "datetime (>=6.0,<7.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "brokenaxes (>=0.6.2,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
